# job_search

./: .flake8  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api.py  file_handler.py  vacancy.py
tests/: test_api.py  test_handler.py  test_vacancy.py
